fix text input bleeding

--- a/frontend/src/components/QuestionInput/QuestionInput.module.css
+++ b/frontend/src/components/QuestionInput/QuestionInput.module.css
@@ -18,7 +18,7 @@
   margin-top: 10px;
   margin-bottom: 10px;
   margin-left: 12px;
-  margin-right: 12px;
+  margin-right: 50px;
 }
 
 .questionInputSendButtonContainer {
